--- a/simulators/updateNav/src/components/App.html
+++ b/simulators/updateNav/src/components/App.html
@@ -7,6 +7,7 @@
             bind:ar_tags
             bind:gates
             bind:rocks
+            bind:angle
             bind:ar_tag_state
             bind:obstacle_state
             radius_meters="{{radius}}"
@@ -18,6 +19,10 @@
         <p><label>
             Field Radius (meters):
             <input type="number" bind:value="radius"/>
+        </label></p>
+        <p><label>
+            Gate Angle (meters):
+            <input type="number" bind:value="angle"/>
         </label></p>
         <p>
             <label>Upload: </label>
@@ -199,6 +204,7 @@
                 rocks: [],
 
                 radius: 25,
+                angle: 0,
 
                 test: "<name>",
 
