--- a/simulators/updateNav/src/components/SimulatorField.html
+++ b/simulators/updateNav/src/components/SimulatorField.html
@@ -45,6 +45,7 @@ export default {
             center_lon: -110.5,
 
             radius_meters: 25,
+            angle: 0,
 
             odom: null,
 
@@ -397,6 +398,7 @@ export default {
             const gates = this.get("gates");
             const rocks = this.get("rocks");
             const radius = this.get("radius_meters");
+
             const x_scale = (canvas.width/2)/radius;
             const y_scale = (canvas.height/2)/radius;
             ctx.clearRect(0, 0, canvas.width, canvas.height);
@@ -551,11 +553,12 @@ export default {
 
             else if (draw_mode === GATE_MODE) {
                 let gates = this.get("gates");
+                let angle = this.get("angle");
                 console.log("add gate");
 
                 let post_1 = to_dms({lat, lon});
                 post_1.detected = false;
-                let post_2 = this.shift_x_meters({lat, lon}, 3, 0);
+                let post_2 = this.shift_x_meters({lat, lon}, 3, angle);
 
                 gates.push([post_1, post_2]);
                 this.set({ gates });
@@ -585,6 +588,7 @@ export default {
         this.observe("gates", update);
         this.observe("rocks", update);
         this.observe("radius_meters", update);
+        this.observe("angle", update);
 
         update();
     },
