--- a/simulators/updateNav/src/components/SimulatorField.html
+++ b/simulators/updateNav/src/components/SimulatorField.html
@@ -45,6 +45,7 @@ export default {
             center_lon: -110.5,
 
             radius_meters: 25,
+            angle: 0,
 
             odom: null,
 
@@ -171,8 +172,8 @@ export default {
                 }
 
                 console.log("post 1");
-                console.log(Math.abs(bearing_1 - rover_bearing) < ROVER_FIELD_OF_VIEW/2);
-                console.log(dist_1 < ROVER_DEPTH_OF_VIEW);
+                // console.log(Math.abs(bearing_1 - rover_bearing) < ROVER_FIELD_OF_VIEW/2);
+                // console.log(dist_1 < ROVER_DEPTH_OF_VIEW);
                 // console.log(`testing a ball at ${dist} meters by ${bearing} radians`);
                 if (Math.abs(bearing_1 - rover_bearing) < ROVER_FIELD_OF_VIEW/2 && dist_1 < ROVER_DEPTH_OF_VIEW) {
                     console.log("close enough to rover!!");
@@ -188,16 +189,16 @@ export default {
 
                         console.log("setting state in 0");
                         ar_tag_state[0] = {
-                            distance: dist,
-                            bearing: (bearing - rover_bearing) * 180/Math.PI
+                            distance: dist_1,
+                            bearing: (bearing_1 - rover_bearing) * 180/Math.PI
                         };
                     }
                     else
                     {
                         console.log("in here");
                         ar_tag_state[1] = {
-                            distance: dist,
-                            bearing: (bearing - rover_bearing) * 180/Math.PI
+                            distance: dist_1,
+                            bearing: (bearing_1 - rover_bearing) * 180/Math.PI
                         };
                     }
                 }
@@ -397,6 +398,7 @@ export default {
             const gates = this.get("gates");
             const rocks = this.get("rocks");
             const radius = this.get("radius_meters");
+
             const x_scale = (canvas.width/2)/radius;
             const y_scale = (canvas.height/2)/radius;
             ctx.clearRect(0, 0, canvas.width, canvas.height);
@@ -467,7 +469,7 @@ export default {
                 const posts = gates[i];
                 const bcoords_1 = this.to_canvas(this.projection(to_decimal(posts[0])));
 
-                ctx.fillStyle = 'pink';
+                ctx.fillStyle = 'lightblue';
                 ctx.strokeStyle = 'black';
                 ctx.lineWidth = 1;
 
@@ -487,7 +489,7 @@ export default {
 
                 const bcoords_2 = this.to_canvas(this.projection(to_decimal(posts[1])));
 
-                ctx.fillStyle = 'pink';
+                ctx.fillStyle = 'lightblue';
                 ctx.strokeStyle = 'black';
                 ctx.lineWidth = 1;
 
@@ -551,11 +553,13 @@ export default {
 
             else if (draw_mode === GATE_MODE) {
                 let gates = this.get("gates");
+                let angle = this.get("angle");
                 console.log("add gate");
 
                 let post_1 = to_dms({lat, lon});
                 post_1.detected = false;
-                let post_2 = this.shift_x_meters({lat, lon}, 3);
+
+                let post_2 = this.shift_x_meters({lat, lon}, 3, angle);
 
                 gates.push([post_1, post_2]);
                 this.set({ gates });
@@ -572,6 +576,7 @@ export default {
         const update = () => {
             recompute_ar_tag_visibility();
             let ar_tag_state = this.get("ar_tag_state");
+
             if (ar_tag_state[0].distance === -1){
                 recompute_gate_visibility();
             }
@@ -585,6 +590,7 @@ export default {
         this.observe("gates", update);
         this.observe("rocks", update);
         this.observe("radius_meters", update);
+        this.observe("angle", update);
 
         update();
     },
@@ -626,16 +632,29 @@ export default {
             }, coords);
         },
 
-        shift_x_meters: function({lat, lon}, shift) {
-            let change = shift * 0.0000089;
-            let new_lat = lat + change;
-            let new_lon = lon + change / Math.cos(lat * 0.018);
+    // let lat2 = asin(sin(lat1) * cos(distRadians) + cos(lat1) * sin(distRadians) * cos(bearing))
+    // let lon2 = lon1 + atan2(sin(bearing) * sin(distRadians) * cos(lat1), cos(distRadians) - sin(lat1) * sin(lat2))
+
+        shift_x_meters: function({lat, lon}, shift, bearing) {
+
+            let lat1 = lat * Math.PI / 180
+            let lon1 = lon * Math.PI / 180
+
+            var rbearing = bearing * Math.PI / 180.0
+
+            let distRadians = shift / EARTH_RAD;
+
+            let lat2 = Math.asin(Math.sin(lat1) * Math.cos(distRadians) + Math.cos(lat1) * Math.sin(distRadians) * Math.cos(rbearing));
+            let lon2 = lon1 + Math.atan2(Math.sin(rbearing) * Math.sin(distRadians) * Math.cos(lat1), Math.cos(distRadians) - Math.sin(lat1) * Math.sin(lat2));
+            lat2 *= 180 / Math.PI;
+            lon2 *= 180 / Math.PI;
+
             return {
                 detected: false,
-                latitude_deg: Math.trunc(new_lat),
-                latitude_min: (new_lat % 1)*60,
-                longitude_deg: Math.trunc(new_lon),
-                longitude_min: (new_lon % 1)*60
+                latitude_deg: Math.trunc(lat2),
+                latitude_min: (lat2 % 1)*60,
+                longitude_deg: Math.trunc(lon2),
+                longitude_min: (lon2 % 1)*60
             };
         },
 
