# This is a combination of 2 commits. # This is the 1st commit message:
[AutonNav] Added ability for gate to go to first AR tag that can be seen.

# The commit message #2 will be skipped:

# added ability to download testcases

--- a/simulators/updateNav/src/components/App.html
+++ b/simulators/updateNav/src/components/App.html
@@ -262,7 +262,8 @@
             handleDownloadTest: function(event) {
                 var test_case_data = JSON.stringify({ waypoints: app._state.waypoints,
                                                       rocks: app._state.rocks,
-                                                      ar_tags: app._state.ar_tags },
+                                                      ar_tags: app._state.ar_tags,
+                                                      gates: app._state.gates },
                                                     null,
                                                     4)
                 var filename = document.getElementById('input-filename').value + ".json";
